; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_do_for_each_repo_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_do_for_each_repo_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.ref_iterator = type { i32 }
%struct.ref_store = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.repository*, i8*, i32, i32, i32, i8*)* @do_for_each_repo_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_for_each_repo_ref(%struct.repository* %0, i8* %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.repository*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca %struct.ref_iterator*, align 8
  %15 = alloca %struct.ref_store*, align 8
  store %struct.repository* %0, %struct.repository** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %16 = load %struct.repository*, %struct.repository** %8, align 8
  %17 = call %struct.ref_store* @get_main_ref_store(%struct.repository* %16)
  store %struct.ref_store* %17, %struct.ref_store** %15, align 8
  %18 = load %struct.ref_store*, %struct.ref_store** %15, align 8
  %19 = icmp ne %struct.ref_store* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %32

21:                                               ; preds = %6
  %22 = load %struct.ref_store*, %struct.ref_store** %15, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = call %struct.ref_iterator* @refs_ref_iterator_begin(%struct.ref_store* %22, i8* %23, i32 %24, i32 %25)
  store %struct.ref_iterator* %26, %struct.ref_iterator** %14, align 8
  %27 = load %struct.repository*, %struct.repository** %8, align 8
  %28 = load %struct.ref_iterator*, %struct.ref_iterator** %14, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i8*, i8** %13, align 8
  %31 = call i32 @do_for_each_repo_ref_iterator(%struct.repository* %27, %struct.ref_iterator* %28, i32 %29, i8* %30)
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %21, %20
  %33 = load i32, i32* %7, align 4
  ret i32 %33
}

declare dso_local %struct.ref_store* @get_main_ref_store(%struct.repository*) #1

declare dso_local %struct.ref_iterator* @refs_ref_iterator_begin(%struct.ref_store*, i8*, i32, i32) #1

declare dso_local i32 @do_for_each_repo_ref_iterator(%struct.repository*, %struct.ref_iterator*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
